Mugen-Porting/22.09Logs/logs/easymock/oe_test_easymock_spring/2022-09-09-03:08:46.log
Fri Sep  9 03:08:49 2022 - INFO  - Start to prepare the test environment.
Fri Sep  9 03:13:07 2022 - INFO  - End to prepare the test environment.
Fri Sep  9 03:13:07 2022 - INFO  - Start to run test.
OurClassTest.java:4: error: package org.springframework.test.util does not exist
import org.springframework.test.util.ReflectionTestUtils;
                                    ^
OurClassTest.java:18: error: cannot find symbol
        ReflectionTestUtils.setField(classUnderTest, "other", other);
        ^
  symbol:   variable ReflectionTestUtils
  location: class OurClassTest
OurClassTest.java:23: error: cannot find symbol
        ReflectionTestUtils.setField(classUnderTest, "other", other2);
        ^
  symbol:   variable ReflectionTestUtils
  location: class OurClassTest
3 errors
Fri Sep  9 03:13:24 2022 - ERROR - oe_test_easymock_spring.sh line 30
Fri Sep  9 03:13:26 2022 - ERROR - oe_test_easymock_spring.sh line 32
Fri Sep  9 03:13:27 2022 - INFO  - End to run test.
Fri Sep  9 03:13:28 2022 - ERROR - failed to execute the case.
Fri Sep  9 03:13:28 2022 - INFO  - Start to restore the test environment.
Fri Sep  9 03:13:53 2022 - INFO  - End to restore the test environment.
